# kolibri-hello-world

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  i686-kolibri.json  link.x
.cargo/: config.toml
src/: lib.rs  main.rs  nanolibc.rs  sys.rs  syscalls.S  syscalls.c
